--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -1,15 +1,15 @@
 ---
-title: Escape
-subtitle: Website Design
+title: Katherin
+subtitle:
 layout: default
 modal-id: 2
 date: 2014-07-17
-img: escape.png
-thumbnail: escape-thumbnail.png
+img: katherin_big.jpeg
+thumbnail: katherin.png
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
 category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+description: Ich studiere letztem Bachelorsemester Mathematik and der TUM. Seit April 2018 bin ich Teil von Townbee und anfangs habe ich mich hauptsächlich mit Louis das Imkerwissen angeeignet. Jetzt als Projektleiterin zusammen mit Polina und Dennis verfolgen wir das Ziel Townbee zu expandieren und zu vergrößen. Das besondere an Townbee ist, dass wir gleich zwei Probleme in Angriff nehmen, die Sicherung des lokalen Bienenstands und die Integrationsproblematik der vielen Flüchtlinge in Deutschland.
 
 ---
