--- a/_timeline/2018-08.markdown
+++ b/_timeline/2018-08.markdown
@@ -2,5 +2,5 @@
 heading: August 2018
 subheading: Honigernte II
 description: Nach einer busy Bienensaison schleudern wir 50kg Honig, womit wir unseren Ertrag vom letzten Jahr verdreifachen. Neben der Honigernte war es uns möglich, noch drei Ableger aus unseren eigenen Bienchen zu bilden. Wir sind gespannt auf's nächste Jahr.
-image: img/about/honey2.png
+image: /img/about/honey2.png
 ---
