--- a/_timeline/2019.markdown
+++ b/_timeline/2019.markdown
@@ -1,6 +1,6 @@
 ---
-heading: 2016
+heading: 2019
 subheading: LaSalle - Ein neuer Partner
 description: LaSalle Investment Management ist ein weltweit führender Experte im Immobilien-Investment Management. Der Vorreiter zeichnet sich durch ein starkes Engagement in ökologischen Themen aus. Mit unserer Partnerschaft setzen wir uns für eine nachhaltige Entwicklung unserer Umwelt und die Integration von Geflüchteten ein. Seit 2019 ist Townbee mit mehreren Bienenvölker auf dem Grundstück von LaSalle vertreten. 
-image: /img/about/ford.png
+image: /img/about/lasalle.png
 ---
